--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+settings.gradle
+build.gradle
+config/
+gradle/
+gradlew
+gradlew.bat
+
+# Ignore Eclipse 
 .settings/
 .classpath
 .project
