--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ test {
 }
 
 dependencies {
+
+	  compile files('lib/mysql-connector-java-8.0.16.jar')
     // This dependency is found on compile classpath of this component and consumers.
     implementation 'com.google.guava:guava:27.0.1-jre'
 
@@ -65,4 +67,4 @@ checkstyle {
 }*/
 
 // Define the main class for the application
-mainClassName = 'MainTest'
+mainClassName = 'server/MultiServer'
